...
import com.android.universe.ui.components.ScreenLayout
import com.android.universe.ui.navigation.FlowBottomMenu
import com.android.universe.ui.navigation.FlowTab
import com.android.universe.ui.theme.Dimensions

object SignInScreenTestTags {
  const val JOIN_BUTTON = "joinButton"
  const val WELCOME_BOX = "welcomeBox"
  const val ENTER_EMAIL_BOX = "enter_emailBox"
  const val GOOGLE_BOX = "googleBox"
  const val PASSWORD_BOX = "passwordBox"
  const val SIGN_IN_BOX = "signInBox"
}

/**
 * Sign in screen composable.
 *
 * @param viewModel The view model for the sign in screen.
...
