...
import com.android.universe.ui.theme.Dimensions
import com.android.universe.ui.theme.UniverseTheme

/** Constants used for tagging UI elements in [FlowBottomMenu] for testing purposes. */
object FlowBottomMenuTestTags {
  const val MENU = "FlowBottomMenu"
  const val BACK_BUTTON = "BtnBack"
  const val CONFIRM_BUTTON = "BtnConfirm"
  const val DELETE_BUTTON = "BtnDelete"
  const val REJECT_BUTTON = "BtnReject"
  const val EDIT_BUTTON = "BtnEdit"
  const val GOOGLE_BUTTON = "BtnGoogle"
  const val PASSWORD_BUTTON = "BtnPassword"
  const val EMAIL_BUTTON = "BtnEmail"
  const val LOGOUT_BUTTON = "BtnLogout"
  const val GENERATE_BUTTON = "BtnGenerate"
  const val REGENERATE_BUTTON = "BtnRegenerate"
}

...
