...
import androidx.compose.ui.text.input.PasswordVisualTransformation
import androidx.compose.ui.unit.dp

object FormTestTags {
  const val FORM_ERROR = "form_error"
  const val FORM_HINT = "form_hint"
  const val PASSWORD_FIELD = "password_field"
  const val EMAIL_FIELD = "email_field"
}

@Composable
fun TextInputField(
    value: String,
    onValueChange: (String) -> Unit,
...
